# podparser

./: LICENSE  core.html  index.html  item.html  podcast.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbs/: 00_core.ipynb  01_podcast.ipynb  02_item.ipynb  index.ipynb  nbdev.yml
podparser/: _modidx.py  item.py  podcast.py
